Fix logo spacing

--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -133,6 +133,8 @@ html, body {
   .logo {
     margin-top: 2em;
     margin-bottom: 1em;
+    margin-left: auto;
+    margin-right: auto;
     max-width: 160px;
   }
 
